bugFix:打包成jar后无法扫描类文件 feature:log4j日志